# Changelog

## additions
- every playthrough won't have the same abilities for shinigami when you unlock shikai depending on your stats -or not- you might get other abilities
- dark ball ability
- shadow clone ability

## changes
- have to use alt + right click for dark step
- default darkstep cooldown 4 -> 6
- default cooldown umbral cloak 16 -> 20

## fixed

## misc
