@@ -11,6 +11,12 @@
 - default cooldown umbral cloak 16 -> 20
 
 ## fixed
+### player overview screen bugs
+- points not properly rendering for quincy
+- button overlap for hollows
+- points not properly rendering for shinigami
+### stat point command not fixing properly
+- class points not working for quincy when switching races or something along those lines
 
 ## misc
 
